<resources>
    <string name="app_name">Veno</string>


    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="signin_email">로그인</string>
    <string name="signin_complate">로그인 성공</string>
    <string name="signup_complate">회원가입 성공</string>
    <string name="find_account">계정 찾기</string>
    <string name="signup_email">회원가입</string>
    <string name="sign_out">로그아웃</string>
    <string name="sign_out_complate">로그아웃 성공</string>
    <string name="sign_out_fail">로그아웃 실패</string>
    <string name="sign_out_fail_null">이메일과 비밀번호를 입력해 주세요</string>
    <string name="error_event">존재하지 않는 이벤트입니다. 개발자에게 문의 해 주세요</string>
    <string name="gin_junbo">개인정보 약관 및 서비스, 이벤트성 약관 보기</string>
    <string name="nikname">닉네임</string>


    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="gallery">갤러리</string>
    <string name="favorite">좋아요</string>
    <string name="account">계정</string>

    <string name="post">게시물</string>

    <string name="follow">팔로우</string>
    <string name="following">필로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">&#160;</string>
    <string name="alarm_commet">&#186;메시지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신을 팔로우 하기 시작했습니다.</string>

    <string name="sand">보내기</string>

    <string name="upload_img">사진 올리기</string>
    <string name="hint_img_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <string name="back">뒤로</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />


</resources>
